src/test/test-models/bad/for_loops/assign_to_loop_var6.stan
transformed data {
  vector[2] vs;
  for (v in vs) {
    v = 3.2;
  }
}
